--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>Code Snippets</h1>
     <ul>
       <li>
-        <span>Changed1</span>
+        <span>codesandbox</span>
         <a href="/src/index1.html" target="_blank">index1</a>
       </li>
     </ul>
