--- a/index.html
+++ b/index.html
@@ -10,8 +10,12 @@
     <h1>Code Snippets</h1>
     <ul>
       <li>
-        <span>codesandbox</span>
-        <a href="/src/index1.html" target="_blank">index1</a>
+        <span>Spinner, requestAnimationFrame, cancelAnimationFrame, draw</span>
+        <a href="/src/spinner.html" target="_blank">Spinner</a>
+      </li>
+	  <li>
+        <span>Reaction, game requestAnimationFrame, cancelAnimationFrame </span>
+        <a href="/src/reaction.html" target="_blank">Reaction</a>
       </li>
     </ul>
   </body>
