remove to a new tab

--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <ul>
       <li>
         <span>Spinner, requestAnimationFrame, cancelAnimationFrame, draw</span>
-        <a href="/src/spinner.html" target="_blank">Spinner</a>
+        <a href="/src/spinner.html" >Spinner</a>
       </li>
 	  <li>
         <span>Reaction, game requestAnimationFrame, cancelAnimationFrame </span>
-        <a href="/src/reaction.html" target="_blank">Reaction</a>
+        <a href="/src/reaction.html">Reaction</a>
       </li>
     </ul>
   </body>
