--- a/index.html
+++ b/index.html
@@ -1,27 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-  </head>
-  <body>
-    <h1>Code Snippets</h1>
-    <ul>
-      <li>
-        <span>Spinner, requestAnimationFrame, cancelAnimationFrame, draw</span>
-        <a href="/src/spinner.html" >Spinner</a>
-      </li>
-	  <li>
-        <span>Reaction, game requestAnimationFrame, cancelAnimationFrame </span>
-        <a href="/src/reaction.html">Reaction</a>
-      </li>
-    </ul>
-  </body>
-  <style>
-    html {
-      font-size: xx-large;
-    }
-  </style>
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Document</title>
+	</head>
+	<body>
+		<h1>Code Snippets</h1>
+		<ul>
+			<li>
+				<span>Spinner, requestAnimationFrame, cancelAnimationFrame, draw</span>
+				<a href="/src/spinner.html" target="_blank">Spinner</a>
+			</li>
+			<li>
+				<span>Reaction, game, requestAnimationFrame, cancelAnimationFrame </span>
+				<a href="/src/reaction.html" target="_blank">Reaction</a>
+			</li>
+		</ul>
+	</body>
+	<style>
+		html {
+			font-size: xx-large;
+		}
+	</style>
 </html>
