--- a/index.html
+++ b/index.html
@@ -17,6 +17,18 @@
 				<span>Reaction, game, requestAnimationFrame, cancelAnimationFrame </span>
 				<a href="/src/reaction.html" target="_blank">Reaction</a>
 			</li>
+			<li>
+				<span>Promises, some points </span>
+				<a href="/src/promises.html" target="_blank">Promises</a>
+			</li>
+			<li>
+				<span>Promises Multiple, Promise.all() </span>
+				<a href="/src/promises.html" target="_blank">Multiple Promises</a>
+			</li>
+			<li>
+				<span>Custom Promises </span>
+				<a href="/src/promises.html" target="_blank">Custom promises</a>
+			</li>
 		</ul>
 	</body>
 	<style>
