--- a/src/promiseMultiple.html
+++ b/src/promiseMultiple.html
@@ -42,6 +42,9 @@
 					})
 					.catch((e) => {
 						console.log(`There has been a problem with your fetch operation for resource "${url}": ` + e.message);
+					})
+					.finally(() => {
+						console.log(`fetch attempt for "${url}" finished.`);
 					});
 			}
 
@@ -72,18 +75,6 @@
 				.catch((e) => {
 					console.log(e);
 				});
-
-			myPromise
-				.then((response) => {
-					doSomething(response);
-				})
-				.catch((e) => {
-					returnError(e);
-				})
-				.finally(() => {
-					runFinalCode();
-				});
-            
 		</script>
 	</body>
 </html>
