--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<title>Document</title>
 	</head>
 	<body>
-		<h1>Code Snippets</h1>
+		<h1>Code Snippets async</h1>
 		<ul>
 			<li>
 				<span>Spinner, requestAnimationFrame, cancelAnimationFrame, draw</span>
@@ -23,12 +23,45 @@
 			</li>
 			<li>
 				<span>Promises Multiple, Promise.all() </span>
-				<a href="/src/promises.html" target="_blank">Multiple Promises</a>
+				<a href="/src/promiseMultiple.html" target="_blank">Multiple Promises</a>
 			</li>
 			<li>
 				<span>Custom Promises </span>
-				<a href="/src/promises.html" target="_blank">Custom promises</a>
+				<a href="/src/customPromise.html" target="_blank">Custom promises</a>
 			</li>
+			<li>
+				<span>async intro </span>
+				<a href="/src/async.html" target="_blank">async</a>
+			</li>
+			<li>
+				<span>async Multiple </span>
+				<a href="/src/asyncMultiple.html" target="_blank">async multiple</a>
+			</li>
+			<li>
+				<span>async slow fast </span>
+				<a href="/src/asyncSlowFast.html" target="_blank">async slow fast</a>
+			</li>
+			<li>
+				<span>async on class methods to return a promise </span>
+				<a href="/src/asyncClasses.html" target="_blank">async class methods</a>
+			</li>
+
+		</ul>
+		<h1>Click, Events</h1>
+		<ul>
+			<li>
+				<span>currentTarget -> where the click has bubbled to | target -> the original starting point of the click</span>
+				<a href="/src/targetVsCurrentTarget.html" target="_blank">target Vs currentTarget</a>
+			</li>
+			<li>
+				<span>stopPropagation div button</span>
+				<a href="/src/stopPropagation.html" target="_blank">stopPropagation</a>
+			</li>
+			<li>
+				<span>Prevent Default - stops the default action to take place</span>
+				<a href="/src/preventDefault.html" target="_blank">preventDefault</a>
+			</li>
+
 		</ul>
 	</body>
 	<style>
