--- a/src/promiseMultiple.html
+++ b/src/promiseMultiple.html
@@ -19,7 +19,7 @@
 		<script>
 			let url1 = "https://raw.githubusercontent.com/mdn/learning-area/master/javascript/asynchronous/promises/coffee.jpg";
 			let url2 = "https://raw.githubusercontent.com/mdn/learning-area/master/javascript/asynchronous/promises/tea.jpg";
-			let url3 = "../data1.txt";
+			let url3 = "../data.txt";
 			let a = fetch(url1);
 			let b = fetch(url2);
 			let c = fetch(url3);
