--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
 				<a href="/src/promises.html" target="_blank">Promises</a>
 			</li>
 			<li>
+				<span>Promises, Important sequence in which function is done. asynchronous part of promise only invoked after using the .then </span>
+				<a href="/src/PromiseIMPORTANT.html" target="_blank">Promises sequence console.log</a>
+			</li>
+			<li>
 				<span>Promises Multiple, Promise.all() </span>
 				<a href="/src/promiseMultiple.html" target="_blank">Multiple Promises</a>
 			</li>
@@ -44,6 +48,10 @@
 			<li>
 				<span>async on class methods to return a promise </span>
 				<a href="/src/asyncClasses.html" target="_blank">async class methods</a>
+			</li>
+			<li>
+				<span>Implement a task runner </span>
+				<a href="/src/taskRunner.html" target="_blank">Task Runner</a>
 			</li>
 
 		</ul>
