--- a/index.html
+++ b/index.html
@@ -53,6 +53,10 @@
 				<span>Implement a task runner </span>
 				<a href="/src/taskRunner.html" target="_blank">Task Runner</a>
 			</li>
+			<li>
+				<span>Simple way</span>
+				<a href="/src/taskRunnerSimple.html" target="_blank">Task Runner Simple</a>
+			</li>
 
 		</ul>
 		<h1>Click, Events</h1>
